Bluesky share; scrollbar fix

--- a/static/global.css
+++ b/static/global.css
@@ -205,7 +205,7 @@
     text-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
   }
 
-  a[href^='https']:not([href*='zachsaucier.com']) {
+  a[href^='https']:not([href^='https://zachsaucier.com']) {
     display: inline-flex;
     align-items: center;
     gap: 2px;
@@ -224,7 +224,8 @@
 
   button,
   [type='submit'],
-  .read_on.read_on {
+  .button,
+  .button.read_on {
     background-color: var(--button-background);
     color: var(--button-color);
     transition: 0.15s;
